<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_place_moveit2</name>
  <version>2.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_common</build_depend>
  <buildtool_depend>urdf</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
